--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "version"
+
+    productFlavors {
+        freeVersion {
+            dimension = "version"
+            applicationIdSuffix = ".free"
+            versionNameSuffix = "-free"
+        }
+        proVersion {
+            dimension = "version"
+            applicationIdSuffix = ".pro"
+            versionNameSuffix = "-pro"
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -30,11 +46,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+
+
+
 }
 
 dependencies {
-    implementation project (":resources")
-    implementation project (":core")
+    implementation project(":resources")
+    implementation project(":core")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
