--- a/ImageLoader/build.gradle
+++ b/ImageLoader/build.gradle
@@ -23,23 +23,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-    buildFeatures {
-        viewBinding = true
-    }
-
-    flavorDimensions "version"
-
-    productFlavors {
-        freeVersion {
-            dimension = "version"
-            versionNameSuffix = "-free"
-        }
-        proVersion {
-            dimension = "version"
-            versionNameSuffix = "-pro"
-        }
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -50,8 +33,7 @@ android {
 }
 
 dependencies {
-    implementation project(":resources")
-    implementation project(path: ':ImageLoader')
+    implementation project(":core")
 
     implementation _kotlin.kotlin_stdlib
     implementation androidx.core
@@ -61,10 +43,7 @@ dependencies {
     androidTestImplementation tests.androidx_junit
     androidTestImplementation tests.espresso
 
-//    implementation glide.glide
-//    annotationProcessor glide.compiler
-
-//    implementation    "com.github.bumptech.glide:glide:4.12.0"
-//    annotationProcessor "com.github.bumptech.glide:compiler:4.12.0"
-
+    //Glide
+    implementation glide.glide
+    annotationProcessor glide.compiler
 }
