--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -51,7 +51,7 @@ android {
 
 dependencies {
     implementation project(":resources")
-    implementation project(path: ':ImageLoader')
+    implementation project(':ImageLoader')
 
     implementation _kotlin.kotlin_stdlib
     implementation androidx.core
