--- a/versions.gradle
+++ b/versions.gradle
@@ -26,7 +26,9 @@ ext.versions = [
         navigation       : '2.3.5',
         glide            : '4.12.0',
         retrofit         : '2.9.0',
-        rxjava3          : '3.0.0'
+        rxjava3          : '3.0.0',
+        dagger           : '2.38.1',
+        dagger_compiler  : '2.35'
 ]
 
 ext.navigation = [
@@ -81,4 +83,9 @@ ext.retrofit = [
 ext.rxjava3 = [
         rxandroid: "io.reactivex.rxjava3:rxandroid:$versions.rxjava3",
         rxjava   : "io.reactivex.rxjava3:rxjava:$versions.rxjava3"
+]
+
+ext.dagger = [
+        dagger  : "com.google.dagger:dagger:$versions.dagger",
+        compiler: "com.google.dagger:dagger-compiler:$versions.dagger_compiler"
 ]
