--- a/versions.gradle
+++ b/versions.gradle
@@ -12,15 +12,15 @@ ext.versions = [
         kotlin           : '1.5.21',
         gradle           : '7.0.0',
 
-        core             : '1.5.0',
-        appcompat        : '1.3.0',
-        material         : '1.3.0',
+        core             : '1.6.0',
+        appcompat        : '1.3.1',
+        material         : '1.4.0',
         constraint_layout: '2.0.4',
         legacy           : '1.0.0',
 
         junit            : '4.+',
-        androidx_junit   : '1.1.2',
-        espresso         : '3.3.0',
+        androidx_junit   : '1.1.3',
+        espresso         : '3.4.0',
 
         lifecycle        : '2.3.1',
         navigation       : '2.3.5',
@@ -28,7 +28,9 @@ ext.versions = [
         retrofit         : '2.9.0',
         rxjava3          : '3.0.0',
         dagger           : '2.38.1',
-        dagger_compiler  : '2.35'
+        dagger_compiler  : '2.35',
+        room             : '2.3.0',
+        exoplayer        : '2.15.0'
 ]
 
 ext.navigation = [
@@ -55,7 +57,9 @@ ext.androidx = [
         legacy           : "androidx.legacy:legacy-support-v4:$versions.legacy",
         lifecycle        : [
                 livedata : "androidx.lifecycle:lifecycle-livedata-ktx:$versions.lifecycle",
-                viewmodel: "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle"
+                viewmodel: "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle",
+                service  : "androidx.lifecycle:lifecycle-service:$versions.lifecycle"
+
         ]
 ]
 
@@ -88,4 +92,16 @@ ext.rxjava3 = [
 ext.dagger = [
         dagger  : "com.google.dagger:dagger:$versions.dagger",
         compiler: "com.google.dagger:dagger-compiler:$versions.dagger_compiler"
+]
+
+ext.room = [
+        room_runtime : "androidx.room:room-runtime:$versions.room",
+        room_compiler: "androidx.room:room-compiler:$versions.room",
+        room_rxjava3 : "androidx.room:room-rxjava3:$versions.room"
+
+]
+
+ext.exoplayer = [
+        exoplayer             : "com.google.android.exoplayer:exoplayer:$versions.exoplayer",
+        extension_mediasession: "com.google.android.exoplayer:extension-mediasession:$versions.exoplayer"
 ]
