--- a/ExoPlayer/build.gradle
+++ b/ExoPlayer/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation project(":MusicDatabase")
+    implementation project(":core")
 
     implementation androidx.core
     implementation androidx.appcompat
