--- a/FreesoundAPI/build.gradle
+++ b/FreesoundAPI/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
 
     implementation _kotlin.kotlin_stdlib
     implementation androidx.core
