--- a/MusicDatabase/build.gradle
+++ b/MusicDatabase/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation project(":core")
 
     implementation androidx.core
     implementation androidx.appcompat
